--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<style>
+	div { border: 1px black solid; width: 30px; height: 30px; margin: 3px;}
+	</style>
+</head>
 <body>
 
+<div id="result"></div>
 
+<div id="add"> + </div>
+<div id="subtract"> - </div>
+<div id="multiply"> * </div>
+<div id="divide"> / </div>
+
+<div id="1"> 1 </div>
+<div id="2"> 2 </div>
+<div id="3"> 3 </div>
+<div id="4"> 4 </div>
+<div id="5"> 5 </div>
+<div id="6"> 6 </div>
+<div id="7"> 7 </div>
+<div id="8"> 8 </div>
+<div id="9"> 9 </div>
+<div id="0"> 0 </div>
 
 <script type="text/javascript" src="week1.js"></script>
 </body>
