--- a/week1.html
+++ b/week1.html
@@ -2,8 +2,29 @@
 <html>
 <head>
 	<style>
-	.calc div { border: 1px black solid; width: 30px; height: 30px; margin: 3px; line-height: 30px; text-align: center;}
+	.calc div { 
+		border: 1px black solid; 
+		width: 40px; 
+		height: 40px; 
+		margin: 3px; 
+		line-height: 40px; 
+		text-align: center;
+		border-radius: 5px;
+		float: left;
+	}
 	
+	.calc .container {
+		border: none;
+		width: 180px;
+		height: auto;
+		display: block;
+	}
+
+	.calc {
+		width: 180px;
+	}
+
+
 	#result { border: 1px solid black; width: 300px; height: 50px;}
 	</style>
 </head>
@@ -13,22 +34,27 @@
 <div id="result"></div>
 
 <div class="calc">
-	<div class="operator" id="add"> + </div>
-	<div class="operator" id="subtract"> - </div>
-	<div class="operator" id="multiply"> * </div>
-	<div class="operator" id="divide"> / </div>
-	<div id="equals"> = </div>
+	<div class="container">
+		<div class="operator" id="add"> + </div>
+		<div class="operator" id="subtract"> - </div>
+		<div class="operator" id="multiply"> * </div>
+		<div class="operator" id="divide"> / </div>
+		<div id="clear"> C </div>
+		<div id="equals"> = </div>
+	</div>
 
-	<div class="number" id="1"> 1 </div>
-	<div class="number" id="2"> 2 </div>
-	<div class="number" id="3"> 3 </div>
-	<div class="number" id="4"> 4 </div>
-	<div class="number" id="5"> 5 </div>
-	<div class="number" id="6"> 6 </div>
-	<div class="number" id="7"> 7 </div>
-	<div class="number" id="8"> 8 </div>
-	<div class="number" id="9"> 9 </div>
-	<div class="number" id="0"> 0 </div>
+	<div class="container">
+		<div class="number" id="1"> 1 </div>
+		<div class="number" id="2"> 2 </div>
+		<div class="number" id="3"> 3 </div>
+		<div class="number" id="4"> 4 </div>
+		<div class="number" id="5"> 5 </div>
+		<div class="number" id="6"> 6 </div>
+		<div class="number" id="7"> 7 </div>
+		<div class="number" id="8"> 8 </div>
+		<div class="number" id="9"> 9 </div>
+		<div class="number" id="0"> 0 </div>
+	</div>
 </div>
 
 <script type="text/javascript" src="week1.js"></script>
