--- a/week1/index.html
+++ b/week1/index.html
@@ -57,6 +57,6 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="week1.js"></script>
+<script type="text/javascript" src="calculator.js"></script>
 </body>
 </html>
