--- a/week2/index.html
+++ b/week2/index.html
@@ -1,8 +1,7 @@
 <html>
 <body>
 
-	<div id="content">
-
+	<div id="content"></div>
 	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>	
 </body>
 </html>
