--- a/week2/index.html
+++ b/week2/index.html
@@ -5,27 +5,76 @@
 
 	h1 { text-align: center; }
 	.subheading { text-align: center; }
+	.contents { border: 1px solid black;}
+	#tabs li {
+		display: inline;
+		border: 1px solid black;
+		height: 30px;
+		width: 100px;
+		padding: 10px 30px;
+	}
 	</style>
+	 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
 	<div id="content"></div>
-	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script>
+	var tabContents = [], heading, tabs;
 	$(function() {
-
-		var heading = $('<h1>').text('Le Relais de Venise');
 		
-		var subheading = $('<div>')
-			.text('We are French. We like steak.')
-			.addClass('subheading');
 
+		function createTab(tabs, heading, anchor) {
+			var tabLink = $('<a>').attr('href', '#' + anchor).text(heading);
+			tabs.children('ul').first().append('<li>');
+			tabs.find('li').eq($('li', tabs).length-1).append(tabLink);
+		}
+
+		function showTab(tabs, anchor) {
+			console.log(anchor);
+			var result = $.grep(tabContents, function(e) { console.log(e.id); return e.id === anchor});
+			if (!result.length) return;
+
+			var data = result[0];
+			var tab = $('<div>').attr('id', data.id).append(data.contents);
+			tabs.append(tab);
+		}
+
+		tabContents.push({ 
+			title: 'About', 
+			id: 'about', 
+			contents: $('<div>').addClass('contents').text('We are French. We like steak.')});
+
+		tabContents.push({ 
+			title: 'Menu', 
+			id: 'menu', 
+			contents: $('<div>').addClass('contents').text('Steak. And Fries.')});
+
+		tabContents.push({
+			title: 'Contact', 
+			id: 'contact', 
+			contents: $('<div>').addClass('contents').text('Marlybone, The City, Canary Wharf')});
+
+		heading = $('<h1>').text('Le Relais de Venise');
+		tabs = $('<div>').attr('id', 'tabs').append('<ul>');
+
+		tabContents.forEach(function(element, index, array) { createTab(tabs, element.title, element.id); });
+	
+		
 		$('#content')
 			.append(heading)
-			.append(subheading);
+			.append(tabs);
 
-			// .append('<div>We are French. We like steak.</div>')
-			// .addClass('subheading')
+		showTab(tabs, 'about');
+
+		
+
+		// can you do a javascript forEach on an array that doesn't have numeric indexes? e.g. tabContents['menu'], tabContents['about']
+
+		// why doesn't this work? I get 'undefined is not a function' i.e. array.find
+		//tabContents.find(function(element) { element.id == anchor});
+
 	})
 	</script>
 </body>
