--- a/week2/index.html
+++ b/week2/index.html
@@ -5,7 +5,7 @@
 
 	h1 { text-align: center; }
 	.subheading { text-align: center; }
-	.contents { border: 1px solid black;}
+	.contents { padding: 50px; }
 	#tabs li {
 		display: inline;
 		border: 1px solid black;
@@ -23,52 +23,54 @@
 	<script>
 	var tabContents = [], heading, tabs;
 	$(function() {
-		
 
 		function createTab(tabs, heading, anchor) {
 			var tabLink = $('<a>').attr('href', '#' + anchor).text(heading);
 			tabs.children('ul').first().append('<li>');
 			tabs.find('li').eq($('li', tabs).length-1).append(tabLink);
+			tabLink.click(function() { showTab(tabs, anchor) });
+		}
+
+		function setupTabContents(tabs) {
+			tabContents.push({ 
+				title: 'About', 
+				id: 'about', 
+				contents: $('<div>').addClass('contents').text('We are French. We like steak.')});
+
+			tabContents.push({ 
+				title: 'Menu', 
+				id: 'menu', 
+				contents: $('<div>').addClass('contents').text('Salad. Steak. Fries. That\'s about it.')});
+
+			tabContents.push({
+				title: 'Contact', 
+				id: 'contact', 
+				contents: $('<div>').addClass('contents').text('Marlybone, The City, Canary Wharf')});
+
+			tabContents.forEach(function(element, index, array) { createTab(tabs, element.title, element.id); });
 		}
 
 		function showTab(tabs, anchor) {
-			console.log(anchor);
-			var result = $.grep(tabContents, function(e) { console.log(e.id); return e.id === anchor});
+			$('.contents').remove();
+			var result = $.grep(tabContents, function(e) { return e.id === anchor});
 			if (!result.length) return;
 
 			var data = result[0];
-			var tab = $('<div>').attr('id', data.id).append(data.contents);
+			var tab = data.contents.attr('id', data.id); 
 			tabs.append(tab);
 		}
 
-		tabContents.push({ 
-			title: 'About', 
-			id: 'about', 
-			contents: $('<div>').addClass('contents').text('We are French. We like steak.')});
-
-		tabContents.push({ 
-			title: 'Menu', 
-			id: 'menu', 
-			contents: $('<div>').addClass('contents').text('Steak. And Fries.')});
-
-		tabContents.push({
-			title: 'Contact', 
-			id: 'contact', 
-			contents: $('<div>').addClass('contents').text('Marlybone, The City, Canary Wharf')});
 
 		heading = $('<h1>').text('Le Relais de Venise');
 		tabs = $('<div>').attr('id', 'tabs').append('<ul>');
+		setupTabContents(tabs);
 
-		tabContents.forEach(function(element, index, array) { createTab(tabs, element.title, element.id); });
-	
-		
 		$('#content')
 			.append(heading)
 			.append(tabs);
 
 		showTab(tabs, 'about');
 
-		
 
 		// can you do a javascript forEach on an array that doesn't have numeric indexes? e.g. tabContents['menu'], tabContents['about']
 
