snake moves with key press of arrow keys

--- a/week2/index.html
+++ b/week2/index.html
@@ -46,7 +46,7 @@
 			id: 'contact', 
 			contents: $('<div>').addClass('contents').text('Marlybone, The City, Canary Wharf')});
 
-		tabContents.forEach(function(element, index, array) { createTab(tabs, element.title, element.id); });
+		tabContents.forEach(function(element) { createTab(tabs, element.title, element.id); });
 	}
 
 	function showTab(tabs, anchor) {
