--- a/week3/index.html
+++ b/week3/index.html
@@ -9,6 +9,7 @@
 <body>
 	<div id="container"></div>
 	<script type="text/javascript" src="jquery-2.1.0.min.js"></script>
+	<script type="text/javascript" src="game.js"></script>
 	<script type="text/javascript" src="snake.js"></script>
 </body>
 </html>
