split snake.js and the game setup logic into two files. add tests for snake.

--- a/week3/SpecRunner.html
+++ b/week3/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="game.js"></script>
+  <script type="text/javascript" src="snake.js"></script>
   <!-- <script type="text/javascript" src="snake.js"></script> -->
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="specs/game.spec.js"></script>
+  <script type="text/javascript" src="specs/snake.spec.js"></script>
 
 </head>
 
