--- a/week3/index.html
+++ b/week3/index.html
@@ -11,5 +11,6 @@
 	<script type="text/javascript" src="jquery-2.1.0.min.js"></script>
 	<script type="text/javascript" src="game.js"></script>
 	<script type="text/javascript" src="snake.js"></script>
+	<script type="text/javascript" src="setup.js"></script>
 </body>
 </html>
