--- a/week3/index.html
+++ b/week3/index.html
@@ -10,6 +10,7 @@
 	<div id="container"></div>
 	<script type="text/javascript" src="jquery-2.1.0.min.js"></script>
 	<script type="text/javascript" src="game.js"></script>
+	<script type="text/javascript" src="board.js"></script>
 	<script type="text/javascript" src="snake.js"></script>
 	<script type="text/javascript" src="setup.js"></script>
 </body>
