lots of refactoring.

--- a/week3/index.html
+++ b/week3/index.html
@@ -8,10 +8,12 @@
 
 <body>
 	<div id="container"></div>
-	<script type="text/javascript" src="jquery-2.1.0.min.js"></script>
-	<script type="text/javascript" src="game.js"></script>
-	<script type="text/javascript" src="board.js"></script>
-	<script type="text/javascript" src="snake.js"></script>
-	<script type="text/javascript" src="setup.js"></script>
+	<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
+	<script type="text/javascript" src="js/underscore.min.js"></script>
+	<script type="text/javascript" src="js/game.js"></script>
+	<script type="text/javascript" src="js/board.js"></script>
+	<script type="text/javascript" src="js/food.js"></script>
+	<script type="text/javascript" src="js/snake.js"></script>
+	<script type="text/javascript" src="js/setup.js"></script>
 </body>
 </html>
