--- a/week3/specs/SpecRunner.html
+++ b/week3/specs/SpecRunner.html
@@ -13,6 +13,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../js/jquery-2.1.0.min.js"></script>
+  <script type="text/javascript" src="../js/underscore.min.js"></script>
   <script type="text/javascript" src="../js/game.js"></script>
   <script type="text/javascript" src="../js/snake.js"></script>
   <script type="text/javascript" src="../js/food.js"></script>
