--- a/week3/specs/SpecRunner.html
+++ b/week3/specs/SpecRunner.html
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="../js/game.js"></script>
   <script type="text/javascript" src="../js/snake.js"></script>
   <script type="text/javascript" src="../js/food.js"></script>
+  <script type="text/javascript" src="../js/board.js"></script>
   <!-- <script type="text/javascript" src="snake.js"></script> -->
 
   <!-- include spec files here... -->
