add instructions and more polish

--- a/week5/index.html
+++ b/week5/index.html
@@ -7,7 +7,16 @@
     <link type="text/css" rel="stylesheet" href="css/ticTacToe.css"/>
 </head>
 <body>
+<div class="instructions">
+    <p>This is a two-player game of Tic Tac Toe, or Noughts and Crosses. </p>
 
+    <p>Click on a square to play a piece. Each player will alternate turns (i.e. clicks) to play a piece. You may only play a piece in an empty square.</p>
+
+    <p>The first person to put three of their symbols in a row wins the game. </p>
+    <p>The first player's symbol is 'X'. </p>
+</div>
+<div class="result">
+</div>
 <div id="board">
     <div class="row">
         <div class="cell" id="0-0"></div>
