grid looks a bit prettier. extract getNeighbours to be reused later when someone clicks on an item.

--- a/week7/index.html
+++ b/week7/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css.css">
     <div id="board">
     </div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.1.11.1.min.js"></script>
     <script type="text/javascript" src="board.js"></script>
     <script type="text/javascript" src="cell.js"></script>
     <script type="text/javascript" src="game.js"></script>
