create coordinate class, have the renderer draw a line, and make the missiles move in more than one direction

--- a/week9/index.html
+++ b/week9/index.html
@@ -18,6 +18,7 @@
     		margin: -300px 0 0 -400px;
     		top: 50%;
     		left: 50%;
+            cursor: crosshair;
     	}
     </style>
 </head>
@@ -26,6 +27,7 @@
         <script type="text/javascript" src="js/underscore.min.js"></script> 
         <script type="text/javascript" src="js/city.js"></script> 
         <script type="text/javascript" src="js/bunker.js"></script> 
+        <script type="text/javascript" src="js/coordinate.js"></script> 
         <script type="text/javascript" src="js/missile.js"></script> 
         <script type="text/javascript" src="js/renderer.js"></script> 
 		<script type="text/javascript" src="js/game.js"></script> 
