--- a/week9/index.html
+++ b/week9/index.html
@@ -24,11 +24,13 @@
 </head>
 <body>
 		<canvas width="800" height="600" id="canvas"></canvas> 
+        <script type="text/javascript" src="js/rx.all.js"></script> 
         <script type="text/javascript" src="js/underscore.min.js"></script> 
         <script type="text/javascript" src="js/city.js"></script> 
         <script type="text/javascript" src="js/bunker.js"></script> 
         <script type="text/javascript" src="js/coordinate.js"></script> 
         <script type="text/javascript" src="js/missile.js"></script> 
+        <script type="text/javascript" src="js/explosion.js"></script> 
         <script type="text/javascript" src="js/renderer.js"></script> 
 		<script type="text/javascript" src="js/game.js"></script> 
 </body>
