making the index page look less crappy

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 		width: 100%;
 		margin: 0;
 		padding: 0;
-		font-family: Helvetica, sans-serif;
+		font-family: 'Roboto', Helvetica, sans-serif;
 	}
 
 	div.heading {
 		width: 100%;
-		background: #5295B2;
+		background: #626266;
 	}
-
 
 	.heading p {
 		margin: 0 auto;
@@ -26,53 +25,41 @@
 	}
 
 	a {
-		color: black;
+		color: #938172;
+		text-decoration: none;
 	}
 
 	p {
-		margin: 20px;
+		margin: 0 0 0 20px;
 		font-size: 1.2em;
 	}
 
+	h3 {
+		margin: 30px 0 0 20px;
+	}
+
 	</style>
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="heading"><p>Code Sydney - Odin Project Javascript Study Group</p></div>
+<div class="heading"><p>Code Sydney - Javascript Study Group</p></div>
 
-	<p>Here are the list of projects I've built throughout the Code Sydney study group. (Very little CSS effort has gone into these projects. It's all about the javascript.)
+	<p>Here are the list of projects I've built throughout the Code Sydney study group. (Very little CSS effort has gone into these projects!)
 	</p>
-	<p>
-		<b>Week 1</b>
-		<br/><a href="week1/index.html">Javascript Calculator</a>
-		<br/>Learning javascript events
-	</p>
-	<p>
-		<b>Week 2</b>
-		<br/><a href="week2/index.html">Restaurant menu</a> 
-		<br/>jQuery and the DOM. The challenge was to construct the page entirely using jquery methods.
-	</p>
-	<p>
-		<b>Week 3</b>
-		<br/><a href="week3/index.html">Classic Snake Game</a>
-		<br/> Classes, objects and scope. This was a lot of fun to build! I also wrote some tests around the project.
-	</p>
-	<p>
-		<b>Week 4</b>
-		<br/>(Sadface, I didn't do the homework for this week)
-	</p>
-	<p>
-		<b>Week 5</b>
-		<br/><a href="week5/index.html">Tic Tac Toe</a>
-		<br/>This was actually a simpler challenge than snake.
-	</p>
-	<p>
-		<b>Week 6</b>
-		<br/>break
-	</p>
-	<p>
-		<b>Week 7</b>
-		<br/><a href="week7/index.html">Minesweeper</a>
-	</p>
+	
+	<h3><a href="week1/index.html">Javascript Calculator</a></h3>
+	<p>Learning javascript events</p>
+	
+	<h3><a href="week2/index.html">Restaurant menu</a></h3>
+	<p>jQuery and the DOM. The challenge was to construct the page entirely using jquery methods.</p>
+	
+	<h3><a href="week3/index.html">Classic Snake Game</a></h3>
+	<p>Classes, objects and scope. This was a lot of fun to build! I also wrote some tests around the project.</p>
+	<h3><a href="week5/index.html">Tic Tac Toe</a></h3>
+	<p>This was actually a simpler challenge than snake.</p>
+	
+	<h3><a href="week7/index.html">Minesweeper</a></h3>
+	<p>More work on classes & objects.</p>
 
 </body>
 </html>
