add missile command

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 	<p>This was actually a simpler challenge than snake.</p>
 	
 	<h3><a href="week7/index.html">Minesweeper</a></h3>
-	<p>More work on classes & objects.</p>
+	<p>More work on classes & objects (unfinished)</p>
 
+	<h3><a href="week9/index.html">Missile Command</a></h3>
+	<p>Canvas. And a tiny bit of Rx thrown in. This one still has a few bugs, but it is interesting to see how much work needs to go into getting the UI and gameplay right for it to feel 'normal'.</p>
 </body>
 </html>
