--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 		text-decoration: none;
 	}
 
+	a:hover {
+		text-decoration: underline;
+	}
+
 	p {
 		margin: 0 0 0 20px;
 		font-size: 1.2em;
